// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getBackgroundStyles Get correct block background styles for color layer with border 1`] = `
Object {
  "maxi-test > .maxi-background-displayer": Object {
    "border": Object {
      "general": Object {
        "border-bottom-left-radius": "180px",
        "border-bottom-right-radius": "180px",
        "border-bottom-style": "solid",
        "border-bottom-width": "2px",
        "border-color": "rgba(var(--maxi-light-color-5,0,0,0),1)",
        "border-left-style": "solid",
        "border-left-width": "2px",
        "border-right-style": "solid",
        "border-right-width": "2px",
        "border-top-left-radius": "180px",
        "border-top-right-radius": "180px",
        "border-top-style": "solid",
        "border-top-width": "2px",
      },
      "l": Object {
        "border-color": "rgba(var(--maxi-light-color-5,0,0,0),1)",
      },
      "m": Object {
        "border-color": "rgba(var(--maxi-light-color-5,0,0,0),1)",
      },
      "s": Object {
        "border-color": "rgba(var(--maxi-light-color-5,0,0,0),1)",
      },
      "xl": Object {
        "border-color": "rgba(var(--maxi-light-color-5,0,0,0),1)",
      },
      "xs": Object {
        "border-color": "rgba(var(--maxi-light-color-5,0,0,0),1)",
      },
      "xxl": Object {
        "border-color": "rgba(var(--maxi-light-color-5,0,0,0),1)",
      },
    },
    "size": Object {
      "general": Object {
        "left": "-2px",
        "top": "-2px",
      },
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__0": Object {
    "color": Object {
      "general": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),0.07)",
        "display": "block",
      },
      "l": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),0.07)",
      },
      "label": "Background Color",
      "m": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),0.07)",
      },
      "s": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),0.07)",
      },
      "xl": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),0.07)",
      },
      "xs": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),0.07)",
      },
      "xxl": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),0.07)",
      },
    },
  },
}
`;

exports[`getBackgroundStyles Get correct block background styles for color layer with different values on different responsive stages 1`] = `
Object {
  "maxi-test > .maxi-background-displayer": Object {
    "border": Object {
      "general": Object {},
      "l": Object {},
      "m": Object {},
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__0": Object {
    "color": Object {
      "general": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),0.07)",
        "display": "block",
      },
      "l": Object {
        "background-color": "rgba(var(--maxi-light-color-4,255,74,23),0.3)",
      },
      "label": "Background Color",
      "m": Object {
        "background-color": "rgba(var(--maxi-light-color-5,0,0,0),0.59)",
      },
      "s": Object {
        "background-color": "rgba(204,68,68,0.59)",
      },
      "xl": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),0.07)",
      },
      "xs": Object {
        "background-color": "rgba(204,68,68,0.59)",
      },
      "xxl": Object {
        "background-color": "rgba(var(--maxi-light-color-2,242,249,253),0.2)",
      },
    },
  },
}
`;

exports[`getBackgroundStyles Get correct block background styles for color layer with different values on different responsive stages and hover 1`] = `
Object {
  "maxi-test > .maxi-background-displayer": Object {
    "border": Object {
      "general": Object {},
      "l": Object {},
      "m": Object {},
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__0": Object {
    "color": Object {
      "general": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),0.07)",
        "display": "block",
      },
      "l": Object {
        "background-color": "rgba(var(--maxi-light-color-4,255,74,23),0.3)",
      },
      "label": "Background Color",
      "m": Object {
        "background-color": "rgba(var(--maxi-light-color-5,0,0,0),0.59)",
      },
      "s": Object {
        "background-color": "rgba(204,68,68,0.59)",
      },
      "xl": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),0.07)",
      },
      "xs": Object {
        "background-color": "rgba(204,68,68,0.59)",
      },
      "xxl": Object {
        "background-color": "rgba(var(--maxi-light-color-2,242,249,253),0.2)",
      },
    },
  },
}
`;

exports[`getBackgroundStyles Get correct block background styles for different layers, onces created on normal and other on hover 1`] = `
Object {
  "maxi-test > .maxi-background-displayer": Object {
    "border": Object {
      "general": Object {},
      "l": Object {},
      "m": Object {},
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__2": Object {
    "color": Object {
      "general": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),1)",
        "display": "block",
      },
      "l": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),1)",
      },
      "label": "Background Color",
      "m": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),1)",
      },
      "s": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),1)",
      },
      "xl": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),1)",
      },
      "xs": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),1)",
      },
      "xxl": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),1)",
      },
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__3": Object {
    "shape": Object {
      "general": Object {
        "bottom": "0%",
        "display": "block",
        "left": "0%",
        "right": "0%",
        "top": "0%",
        "width": "100%",
      },
      "l": Object {
        "bottom": "0%",
        "left": "0%",
        "right": "0%",
        "top": "0%",
        "width": "100%",
      },
      "label": "SVG Wrapper Background",
      "m": Object {
        "bottom": "0%",
        "left": "0%",
        "right": "0%",
        "top": "0%",
        "width": "100%",
      },
      "s": Object {
        "bottom": "0%",
        "left": "0%",
        "right": "0%",
        "top": "0%",
        "width": "100%",
      },
      "xl": Object {
        "bottom": "0%",
        "left": "0%",
        "right": "0%",
        "top": "0%",
        "width": "100%",
      },
      "xs": Object {
        "bottom": "0%",
        "left": "0%",
        "right": "0%",
        "top": "0%",
        "width": "100%",
      },
      "xxl": Object {
        "bottom": "0%",
        "left": "0%",
        "right": "0%",
        "top": "0%",
        "width": "100%",
      },
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__3 > svg:first-child": Object {
    "shape": Object {},
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__3 > svg:first-child pattern image": Object {
    "shape": Object {},
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__3 svg *": Object {
    "shape": Object {
      "general": Object {
        "fill": "rgba(var(--maxi-light-color-4,255,74,23),1)",
      },
      "l": Object {
        "fill": "rgba(var(--maxi-light-color-4,255,74,23),1)",
      },
      "label": "SVG Background",
      "m": Object {
        "fill": "rgba(var(--maxi-light-color-4,255,74,23),1)",
      },
      "s": Object {
        "fill": "rgba(var(--maxi-light-color-4,255,74,23),1)",
      },
      "xl": Object {
        "fill": "rgba(var(--maxi-light-color-4,255,74,23),1)",
      },
      "xs": Object {
        "fill": "rgba(var(--maxi-light-color-4,255,74,23),1)",
      },
      "xxl": Object {
        "fill": "rgba(var(--maxi-light-color-4,255,74,23),1)",
      },
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__4": Object {
    "video": Object {
      "general": Object {
        "display": "block",
        "opacity": 1,
      },
      "l": Object {
        "opacity": 1,
      },
      "label": "Video Background",
      "m": Object {
        "opacity": 1,
      },
      "s": Object {
        "opacity": 1,
      },
      "xl": Object {
        "opacity": 1,
      },
      "xs": Object {
        "opacity": 1,
      },
      "xxl": Object {
        "opacity": 1,
      },
    },
  },
}
`;

exports[`getBackgroundStyles Get correct block background styles for general responsive stage 1`] = `
Object {
  "maxi-test > .maxi-background-displayer": Object {
    "border": Object {
      "general": Object {},
      "l": Object {},
      "m": Object {},
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__0": Object {
    "color": Object {
      "general": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),1)",
        "display": "block",
      },
      "l": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),1)",
      },
      "label": "Background Color",
      "m": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),1)",
      },
      "s": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),1)",
      },
      "xl": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),1)",
      },
      "xs": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),1)",
      },
      "xxl": Object {
        "background-color": "rgba(var(--maxi-light-color-1,255,255,255),1)",
      },
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__1": Object {
    "image": Object {
      "general": Object {
        "display": "block",
      },
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__2": Object {
    "video": Object {
      "general": Object {
        "display": "block",
        "opacity": 1,
      },
      "l": Object {
        "opacity": 1,
      },
      "label": "Video Background",
      "m": Object {
        "opacity": 1,
      },
      "s": Object {
        "opacity": 1,
      },
      "xl": Object {
        "opacity": 1,
      },
      "xs": Object {
        "opacity": 1,
      },
      "xxl": Object {
        "opacity": 1,
      },
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__3": Object {
    "gradient": Object {
      "general": Object {
        "display": "block",
        "opacity": 1,
      },
      "l": Object {},
      "label": "Background gradient",
      "m": Object {},
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__4": Object {
    "shape": Object {
      "general": Object {
        "display": "block",
        "width": "100%",
      },
      "l": Object {
        "width": "100%",
      },
      "label": "SVG Wrapper Background",
      "m": Object {
        "width": "100%",
      },
      "s": Object {
        "width": "100%",
      },
      "xl": Object {
        "width": "100%",
      },
      "xs": Object {
        "width": "100%",
      },
      "xxl": Object {
        "width": "100%",
      },
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__4 > svg:first-child": Object {
    "shape": Object {},
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__4 > svg:first-child pattern image": Object {
    "shape": Object {},
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__4 svg *": Object {
    "shape": Object {
      "general": Object {
        "fill": "rgba(var(--maxi-light-color-5,0,0,0),1)",
      },
      "l": Object {
        "fill": "rgba(var(--maxi-light-color-5,0,0,0),1)",
      },
      "label": "SVG Background",
      "m": Object {
        "fill": "rgba(var(--maxi-light-color-5,0,0,0),1)",
      },
      "s": Object {
        "fill": "rgba(var(--maxi-light-color-5,0,0,0),1)",
      },
      "xl": Object {
        "fill": "rgba(var(--maxi-light-color-5,0,0,0),1)",
      },
      "xs": Object {
        "fill": "rgba(var(--maxi-light-color-5,0,0,0),1)",
      },
      "xxl": Object {
        "fill": "rgba(var(--maxi-light-color-5,0,0,0),1)",
      },
    },
  },
}
`;

exports[`getBackgroundStyles Get correct block background styles for gradient layer with different values on different responsive stages 1`] = `
Object {
  "maxi-test > .maxi-background-displayer": Object {
    "border": Object {
      "general": Object {},
      "l": Object {},
      "m": Object {},
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__0": Object {
    "gradient": Object {
      "general": Object {
        "background": "radial-gradient(rgb(6,147,227) 0%,rgb(68,150,185) 52%,rgb(155,81,224) 100%)",
        "display": "block",
        "opacity": 0.15,
      },
      "l": Object {
        "background": "radial-gradient(rgb(6,147,227) 0%,rgb(89,121,135) 29%,rgb(68,150,185) 52%,rgb(155,81,224) 100%)",
        "opacity": 0.8,
      },
      "label": "Background gradient",
      "m": Object {
        "background": "radial-gradient(rgb(6,147,227) 0%,rgb(89,121,135) 29%,rgb(68,150,185) 52%,rgb(155,81,224) 100%)",
      },
      "s": Object {
        "background": "radial-gradient(rgb(6,147,227) 0%,rgb(89,121,135) 29%,rgb(68,150,185) 52%,rgb(118,170,192) 76%,rgb(155,81,224) 100%)",
        "opacity": 0.17,
      },
      "xl": Object {
        "background": "radial-gradient(rgb(6,147,227) 0%,rgb(68,150,185) 52%,rgb(155,81,224) 100%)",
        "opacity": 0.15,
      },
      "xs": Object {
        "background": "radial-gradient(rgb(6,147,227) 0%,rgb(89,121,135) 29%,rgb(68,150,185) 52%,rgb(118,170,192) 76%,rgb(155,81,224) 100%)",
      },
      "xxl": Object {
        "background": "radial-gradient(rgb(6,147,227) 0%,rgb(68,150,185) 52%,rgb(155,81,224) 100%)",
        "opacity": 0.48,
      },
    },
  },
}
`;

exports[`getBackgroundStyles Get correct block background styles for gradient layer with different values on different responsive stages and hovers 1`] = `
Object {
  "maxi-test > .maxi-background-displayer": Object {
    "border": Object {
      "general": Object {},
      "l": Object {},
      "m": Object {},
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__0": Object {
    "gradient": Object {
      "general": Object {
        "background": "radial-gradient(rgb(6,147,227) 0%,rgb(68,150,185) 52%,rgb(155,81,224) 100%)",
        "display": "block",
        "opacity": 0.15,
      },
      "l": Object {
        "background": "radial-gradient(rgb(6,147,227) 0%,rgb(89,121,135) 29%,rgb(68,150,185) 52%,rgb(155,81,224) 100%)",
        "opacity": 0.8,
      },
      "label": "Background gradient",
      "m": Object {
        "background": "radial-gradient(rgb(6,147,227) 0%,rgb(89,121,135) 29%,rgb(68,150,185) 52%,rgb(155,81,224) 100%)",
      },
      "s": Object {
        "background": "radial-gradient(rgb(6,147,227) 0%,rgb(89,121,135) 29%,rgb(68,150,185) 52%,rgb(118,170,192) 76%,rgb(155,81,224) 100%)",
        "opacity": 0.17,
      },
      "xl": Object {
        "background": "radial-gradient(rgb(6,147,227) 0%,rgb(68,150,185) 52%,rgb(155,81,224) 100%)",
        "opacity": 0.15,
      },
      "xs": Object {
        "background": "radial-gradient(rgb(6,147,227) 0%,rgb(89,121,135) 29%,rgb(68,150,185) 52%,rgb(118,170,192) 76%,rgb(155,81,224) 100%)",
      },
      "xxl": Object {
        "background": "radial-gradient(rgb(6,147,227) 0%,rgb(68,150,185) 52%,rgb(155,81,224) 100%)",
        "opacity": 0.48,
      },
    },
  },
}
`;

exports[`getBackgroundStyles Get correct block background styles for image layer with different values on different responsive stages 1`] = `
Object {
  "maxi-test > .maxi-background-displayer": Object {
    "border": Object {
      "general": Object {},
      "l": Object {},
      "m": Object {},
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__0": Object {
    "image": Object {
      "general": Object {
        "background-attachment": "local",
        "background-clip": "padding-box",
        "background-image": "url('http://localhost:8888/wp-content/uploads/2021/10/maxi-PIL-65.jpg')",
        "background-origin": "border-box",
        "background-position": "left top",
        "background-repeat": "repeat-x",
        "background-size": "cover",
        "display": "block",
      },
      "l": Object {
        "background-attachment": "fixed",
        "background-clip": "padding-box",
        "background-origin": "content-box",
        "background-position": "right top",
        "background-repeat": "space",
        "background-size": "contain",
      },
      "label": "Background Image",
      "m": Object {
        "background-position": "right top",
        "background-size": "contain",
      },
      "s": Object {
        "background-attachment": "scroll",
        "background-position": "center top",
        "background-repeat": "repeat-x",
        "background-size": "contain",
      },
      "xl": Object {
        "background-attachment": "local",
        "background-clip": "padding-box",
        "background-origin": "border-box",
        "background-position": "left top",
        "background-repeat": "repeat-x",
        "background-size": "cover",
      },
      "xs": Object {
        "background-position": "center top",
        "background-size": "auto",
      },
      "xxl": Object {
        "background-position": "left top",
        "background-size": "cover",
      },
    },
  },
}
`;

exports[`getBackgroundStyles Get correct block background styles for image layer with different values on different responsive stages and hovers 1`] = `
Object {
  "maxi-test > .maxi-background-displayer": Object {
    "border": Object {
      "general": Object {},
      "l": Object {},
      "m": Object {},
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__0": Object {
    "image": Object {
      "general": Object {
        "background-attachment": "local",
        "background-clip": "padding-box",
        "background-image": "url('http://localhost:8888/wp-content/uploads/2021/10/maxi-PIL-65.jpg')",
        "background-origin": "border-box",
        "background-position": "left top",
        "background-repeat": "repeat-x",
        "background-size": "cover",
        "display": "block",
      },
      "l": Object {
        "background-attachment": "fixed",
        "background-clip": "padding-box",
        "background-origin": "content-box",
        "background-position": "right top",
        "background-repeat": "space",
        "background-size": "contain",
      },
      "label": "Background Image",
      "m": Object {
        "background-position": "right top",
        "background-size": "contain",
      },
      "s": Object {
        "background-attachment": "scroll",
        "background-position": "center top",
        "background-repeat": "repeat-x",
        "background-size": "contain",
      },
      "xl": Object {
        "background-attachment": "local",
        "background-clip": "padding-box",
        "background-origin": "border-box",
        "background-position": "left top",
        "background-repeat": "repeat-x",
        "background-size": "cover",
      },
      "xs": Object {
        "background-position": "center top",
        "background-size": "auto",
      },
      "xxl": Object {
        "background-position": "left top",
        "background-size": "cover",
      },
    },
  },
}
`;

exports[`getBackgroundStyles Get correct block background styles for image layer with parallax and different values on different responsive stages 1`] = `
Object {
  "maxi-test > .maxi-background-displayer": Object {
    "border": Object {
      "general": Object {},
      "l": Object {},
      "m": Object {},
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__0": Object {
    "image": Object {
      "general": Object {
        "display": "block",
      },
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__0 img": Object {
    "image": Object {
      "general": Object {
        "display": "block",
        "object-fit": "cover",
        "object-position": "left top",
      },
      "l": Object {
        "object-fit": "contain",
        "object-position": "right top",
      },
      "label": "Background Image",
      "m": Object {
        "object-fit": "contain",
        "object-position": "right top",
      },
      "s": Object {
        "object-fit": "contain",
        "object-position": "center top",
      },
      "xl": Object {
        "object-fit": "cover",
        "object-position": "left top",
      },
      "xs": Object {
        "object-fit": "auto",
        "object-position": "center top",
      },
      "xxl": Object {
        "object-fit": "cover",
        "object-position": "left top",
      },
    },
  },
}
`;

exports[`getBackgroundStyles Get correct block background styles for shape layer with different values on different responsive stages 1`] = `
Object {
  "maxi-test > .maxi-background-displayer": Object {
    "border": Object {
      "general": Object {},
      "l": Object {},
      "m": Object {},
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__0": Object {
    "shape": Object {
      "general": Object {
        "display": "block",
        "width": "34%",
      },
      "l": Object {
        "width": "34%",
      },
      "label": "SVG Wrapper Background",
      "m": Object {
        "width": "34%",
      },
      "s": Object {
        "width": "34%",
      },
      "xl": Object {
        "width": "34%",
      },
      "xs": Object {
        "width": "34%",
      },
      "xxl": Object {
        "width": "84%",
      },
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__0 > svg:first-child": Object {
    "shape": Object {
      "general": Object {
        "transform": "scale(0.72) rotate(104deg) ",
      },
      "l": Object {
        "transform": "scale(0.72) rotate(104deg) ",
      },
      "m": Object {
        "transform": "scale(0.72) rotate(104deg) ",
      },
      "s": Object {
        "transform": "scale(0.72) rotate(104deg) ",
      },
      "xl": Object {
        "transform": "scale(0.72) rotate(104deg) ",
      },
      "xs": Object {
        "transform": "scale(0.72) rotate(104deg) ",
      },
      "xxl": Object {
        "transform": "scale(0.72) rotate(104deg) ",
      },
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__0 > svg:first-child pattern image": Object {
    "shape": Object {
      "general": Object {
        "transform": "scale(1.3888888888888888) rotate(-104deg) ",
      },
      "l": Object {
        "transform": "scale(1.3888888888888888) rotate(-104deg) ",
      },
      "m": Object {
        "transform": "scale(1.3888888888888888) rotate(-104deg) ",
      },
      "s": Object {
        "transform": "scale(1.3888888888888888) rotate(-104deg) ",
      },
      "xl": Object {
        "transform": "scale(1.3888888888888888) rotate(-104deg) ",
      },
      "xs": Object {
        "transform": "scale(1.3888888888888888) rotate(-104deg) ",
      },
      "xxl": Object {
        "transform": "scale(1.3888888888888888) rotate(-104deg) ",
      },
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__0 svg *": Object {
    "shape": Object {
      "general": Object {
        "fill": "rgba(var(--maxi-light-color-5,0,0,0),1)",
      },
      "l": Object {
        "fill": "rgba(var(--maxi-light-color-3,155,155,155),0.37)",
      },
      "label": "SVG Background",
      "m": Object {
        "fill": "rgba(var(--maxi-light-color-3,155,155,155),0.37)",
      },
      "s": Object {
        "fill": "rgba(var(--maxi-light-color-7,8,18,25),0.37)",
      },
      "xl": Object {
        "fill": "rgba(var(--maxi-light-color-5,0,0,0),1)",
      },
      "xs": Object {
        "fill": "rgba(var(--maxi-light-color-7,8,18,25),0.37)",
      },
      "xxl": Object {
        "fill": "rgba(var(--maxi-light-color-2,242,249,253),0.37)",
      },
    },
  },
}
`;

exports[`getBackgroundStyles Get correct block background styles for shape layer with different values on different responsive stages and hovers 1`] = `
Object {
  "maxi-test > .maxi-background-displayer": Object {
    "border": Object {
      "general": Object {},
      "l": Object {},
      "m": Object {},
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__0": Object {
    "shape": Object {
      "general": Object {
        "display": "block",
        "width": "34%",
      },
      "l": Object {
        "width": "34%",
      },
      "label": "SVG Wrapper Background",
      "m": Object {
        "width": "34%",
      },
      "s": Object {
        "width": "34%",
      },
      "xl": Object {
        "width": "34%",
      },
      "xs": Object {
        "width": "34%",
      },
      "xxl": Object {
        "width": "84%",
      },
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__0 > svg:first-child": Object {
    "shape": Object {},
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__0 > svg:first-child pattern image": Object {
    "shape": Object {},
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__0 svg *": Object {
    "shape": Object {
      "general": Object {
        "fill": "rgba(var(--maxi-light-color-5,0,0,0),1)",
      },
      "l": Object {
        "fill": "rgba(var(--maxi-light-color-3,155,155,155),0.37)",
      },
      "label": "SVG Background",
      "m": Object {
        "fill": "rgba(var(--maxi-light-color-3,155,155,155),0.37)",
      },
      "s": Object {
        "fill": "rgba(var(--maxi-light-color-7,8,18,25),0.37)",
      },
      "xl": Object {
        "fill": "rgba(var(--maxi-light-color-5,0,0,0),1)",
      },
      "xs": Object {
        "fill": "rgba(var(--maxi-light-color-7,8,18,25),0.37)",
      },
      "xxl": Object {
        "fill": "rgba(var(--maxi-light-color-2,242,249,253),0.37)",
      },
    },
  },
}
`;

exports[`getBackgroundStyles Get correct block background styles for video layer with different values on different responsive stages 1`] = `
Object {
  "maxi-test > .maxi-background-displayer": Object {
    "border": Object {
      "general": Object {},
      "l": Object {},
      "m": Object {},
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__0": Object {
    "video": Object {
      "general": Object {
        "background": "url(http://localhost:8888/wp-content/uploads/2021/10/maxi-PIL-65.jpg)",
        "background-size": "cover",
        "display": "block",
        "opacity": 0.11,
      },
      "l": Object {
        "background": "url(http://localhost:8888/wp-content/uploads/2021/09/maxi-a6848490-test.jpg)",
        "background-size": "cover",
        "opacity": 0.65,
      },
      "label": "Video Background",
      "m": Object {
        "background": "url(http://localhost:8888/wp-content/uploads/2021/09/maxi-a6848490-test.jpg)",
        "background-size": "cover",
        "opacity": 0.65,
      },
      "s": Object {
        "background": "url(http://localhost:8888/wp-content/uploads/2021/09/maxi-a6848490-test.jpg)",
        "background-size": "cover",
        "opacity": 0.25,
      },
      "xl": Object {
        "background": "url(http://localhost:8888/wp-content/uploads/2021/10/maxi-PIL-65.jpg)",
        "background-size": "cover",
        "opacity": 0.11,
      },
      "xs": Object {
        "background": "url(http://localhost:8888/wp-content/uploads/2021/09/maxi-a6848490-test.jpg)",
        "background-size": "cover",
        "opacity": 0.9,
      },
      "xxl": Object {
        "background": "url(http://localhost:8888/wp-content/uploads/2021/09/maxi-IMG_9344-scaled-1.jpg)",
        "background-size": "cover",
        "opacity": 0.37,
      },
    },
  },
}
`;

exports[`getBackgroundStyles Get correct block background styles for video layer with different values on different responsive stages and hovers 1`] = `
Object {
  "maxi-test > .maxi-background-displayer": Object {
    "border": Object {
      "general": Object {},
      "l": Object {},
      "m": Object {},
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__0": Object {
    "video": Object {
      "general": Object {
        "background": "url(http://localhost:8888/wp-content/uploads/2021/10/maxi-PIL-65.jpg)",
        "background-size": "cover",
        "display": "block",
        "opacity": 0.11,
      },
      "l": Object {
        "background": "url(http://localhost:8888/wp-content/uploads/2021/09/maxi-a6848490-test.jpg)",
        "background-size": "cover",
        "opacity": 0.65,
      },
      "label": "Video Background",
      "m": Object {
        "background": "url(http://localhost:8888/wp-content/uploads/2021/09/maxi-a6848490-test.jpg)",
        "background-size": "cover",
        "opacity": 0.65,
      },
      "s": Object {
        "background": "url(http://localhost:8888/wp-content/uploads/2021/09/maxi-a6848490-test.jpg)",
        "background-size": "cover",
        "opacity": 0.25,
      },
      "xl": Object {
        "background": "url(http://localhost:8888/wp-content/uploads/2021/10/maxi-PIL-65.jpg)",
        "background-size": "cover",
        "opacity": 0.11,
      },
      "xs": Object {
        "background": "url(http://localhost:8888/wp-content/uploads/2021/09/maxi-a6848490-test.jpg)",
        "background-size": "cover",
        "opacity": 0.9,
      },
      "xxl": Object {
        "background": "url(http://localhost:8888/wp-content/uploads/2021/09/maxi-IMG_9344-scaled-1.jpg)",
        "background-size": "cover",
        "opacity": 0.37,
      },
    },
  },
}
`;

exports[`getBackgroundStyles Get correct simple background styles 1`] = `
Object {
  "background": Object {
    "general": Object {
      "background-color": "rgba(var(--maxi-light-color-1,255,255,255),0.39)",
    },
    "l": Object {
      "background": "linear-gradient(135deg,rgb(6,147,227) 0%,rgb(73,131,156) 39%,rgb(155,81,224) 100%)",
      "opacity": 0.29,
    },
    "label": "Background gradient",
    "m": Object {
      "background-color": "rgba(var(--maxi-light-color-4,255,74,23),0.39)",
    },
    "s": Object {
      "background-color": "rgba(43,43,179,0.39)",
    },
    "xl": Object {
      "background-color": "rgba(var(--maxi-light-color-1,255,255,255),0.39)",
    },
    "xs": Object {
      "background": "linear-gradient(135deg,rgb(6,147,227) 0%,rgb(73,131,156) 39%,rgb(102,186,223) 67%,rgb(155,81,224) 100%)",
    },
    "xxl": Object {
      "background-color": "rgba(var(--maxi-light-color-2,242,249,253),0.39)",
    },
  },
}
`;
